# EPECsolve

./: .gitignore  .ycm_extra_conf.py  Archive.cpp  BalasPolyhedron.cpp  CMakeLists.txt  EPEC.cpp  EPECSGM  EPECsolve  FormulateLCP.ipe  Games.cpp  LCPTree.cpp  LCPtoLP.cpp  LCPtoLPold.cpp  Makefile  Makefile_rosso  Models.cpp  README.md  epecsolve.h  func.h  games.h  lcptolp.h  models.h  refConf  refDetConf  runSelectiveTests.sh  runTests.sh  sand2  style.clang-format  temp
dat/: LCP_0  countrQP_0
doc/: index.html
doc/html/: EPEC_8cpp.html  Games_8cpp.html  LCPtoLP_8cpp.html  LCPtoLP_8cpp_source.html  README_8md.html  _formulas.tex  classGame_1_1NashGame.html  classGame_1_1QP__Param.html  classModels_1_1EPEC.html  classQP__Param.html  doxygen.css  func_8h_source.html  functions_func.html  functions_rela.html  functions_vars.html  globals_func.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  namespaces.html  structModels_1_1DemPar.html
docs/: DocError.txt  refConf  refDetConf
docs/html/: CombinatorialPNE_8cpp.html  CombinatorialPNE_8cpp_source.html  CommandLineInterface_8cpp.html  CommandLineInterface_8cpp_source.html  EPEC_8cpp.html  EPEC_8cpp_source.html  EPEC_8doc.html  Epec_example (Case Conflict (1)).html  Epec_example (Case Conflict (3)).html  Epec_example (Case Conflict (4)).html  Epec_example.html  FullEnumeration_8cpp.html  FullEnumeration_8cpp_source.html  Game_1_1EPEC.html  Games_8cpp.html  Games_8cpp.js  Games_8cpp_source.html  InnerApproximation_8cpp.html  InnerApproximation_8cpp_source.html  LCP_8cpp.html  LCP_8cpp_source.html  LCP_8doc.html  LCP_Example.html  LCPtoLP_8cpp.html  LCPtoLP_8cpp.js  LCPtoLP_8cpp_source.html  Models_8cpp.html  Models_8cpp.js  Models_8cpp_source.html  NashGame_Example.html  NashLCP_8doc.html  OuterApproximation_8cpp.html  OuterApproximation_8cpp_source.html  OuterLCP_8cpp.html  OuterLCP_8cpp_source.html  QP_Param_Example.html  QP__Param_8doc.html  README_8md.html  README_8md_source.html  Utils_8cpp.html  (+225 more)
examples/: example.cpp
include/: epecsolve.h  games.h  models.h  utils.h
include/algorithms/: algorithms.h  combinatorialpne.h  fullenumeration.h  innerapproximation.h  outerapproximation.h  polybase.h
include/lcp/: lcp.h  outerlcp.h  polylcp.h
instances/: makeInstances.cpp
numerical/: NashLCP.lp  NashLCP.sol  sol.cplex.sol  sol.gurobi.sol
src/: CMakeConfig.h.in  ChileArgentina.cpp  CommandLineInterface.cpp  EPEC.cpp  FacilityData.cpp  FacilityData.h  Games.cpp  LCPtoLP.cpp  Models.cpp  SGM.cpp  Utils.cpp  epecsolve.h  example.cpp  games.h  innerApproximation.cpp  innerApproximation.h  lcptolp.h  makeInstances.cpp  makeTests.cpp  models.h  utils.h
src/LCP/: LCP.cpp  LCP.h  LCPGams.gms  OuterLCP.cpp  (+5 more)
test/: EPEC.cpp  M.txt  Msp.txt  Testdata.cpp  data.txt  epectests.h  out.txt  sand2.cpp  testdata.h
(+155 files in other folders)
